improve margin handling and restructure stories

--- a/projects/angular/src/modal/side-panel.html
+++ b/projects/angular/src/modal/side-panel.html
@@ -1,6 +1,6 @@
 <clr-modal
   [clrModalOpen]="_open"
-  (clrModalOpenChange)="openChange.emit($event)"
+  (clrModalOpenChange)="handleModalOpen($event)"
   [clrModalCloseButtonAriaLabel]="closeButtonAriaLabel"
   [clrModalSize]="size"
   [clrModalSkipAnimation]="skipAnimation"
