fix: revert css changes and add row calculations

--- a/projects/angular/src/data/datagrid/datagrid-row.html
+++ b/projects/angular/src/data/datagrid/datagrid-row.html
@@ -140,3 +140,7 @@
 </ng-template>
 
 <ng-container #calculatedCells></ng-container>
+
+<ng-template #fixedCellTemplate>
+  <div class="datagrid-fixed-column datagrid-cell" role="gridcell"></div>
+</ng-template>
