--- a/projects/angular/src/data/datagrid/datagrid.html
+++ b/projects/angular/src/data/datagrid/datagrid.html
@@ -17,6 +17,7 @@
                 <div class="datagrid-row-sticky">
                   <!--header for datagrid where you can select multiple rows -->
                   <div
+                    #stickyHeader
                     role="columnheader"
                     class="datagrid-column datagrid-select datagrid-fixed-column"
                     *ngIf="selection.selectionType === SELECTION_TYPE.Multi"
@@ -43,6 +44,7 @@
                   </div>
                   <!-- header for datagrid where you can select one row only -->
                   <div
+                    #stickyHeader
                     role="columnheader"
                     class="datagrid-column datagrid-select datagrid-fixed-column"
                     *ngIf="selection.selectionType === SELECTION_TYPE.Single"
@@ -52,6 +54,7 @@
                   </div>
                   <!-- header for single row action; only displayType if we have at least one actionable row in datagrid -->
                   <div
+                    #stickyHeader
                     role="columnheader"
                     class="datagrid-column datagrid-row-actions datagrid-fixed-column"
                     *ngIf="rowActionService.hasActionableRow"
@@ -61,6 +64,7 @@
                   </div>
                   <!-- header for carets; only displayType if we have at least one expandable row in datagrid -->
                   <div
+                    #stickyHeader
                     role="columnheader"
                     class="datagrid-column datagrid-expandable-caret datagrid-fixed-column"
                     *ngIf="expandableRows.hasExpandableRow || detailService.enabled"
@@ -114,3 +118,7 @@
   </div>
   <ng-container #calculationRows></ng-container>
 </div>
+
+<ng-template #fixedColumnTemplate>
+  <div class="datagrid-column datagrid-fixed-column"></div>
+</ng-template>
