fix(alert): adjust icon name

--- a/projects/angular/src/emphasis/alert/alert.html
+++ b/projects/angular/src/emphasis/alert/alert.html
@@ -17,6 +17,6 @@
     <ng-content></ng-content>
   </div>
   <button type="button" class="close" *ngIf="closable" (click)="close()" [attr.aria-label]="clrCloseButtonAriaLabel">
-    <cds-icon shape="window-close"></cds-icon>
+    <cds-icon shape="times"></cds-icon>
   </button>
 </div>
