--- a/projects/angular/src/modal/side-panel.html
+++ b/projects/angular/src/modal/side-panel.html
@@ -7,6 +7,7 @@
   [clrModalStaticBackdrop]="staticBackdrop"
   [clrModalLabelledById]="labelledById"
   [clrModalPreventClose]="preventClose"
+  [clrModalClosable]="closable"
   (clrModalAlternateClose)="altClose.emit($event)"
   [clrModalOverrideScrollService]="true"
 >
