--- a/projects/angular/src/data/datagrid/datagrid-row.html
+++ b/projects/angular/src/data/datagrid/datagrid-row.html
@@ -7,6 +7,7 @@
   (click)="selectRow(!selected, $event)"
   [class.datagrid-row-clickable]="selection.rowSelectionMode"
   [class.datagrid-row-detail-open]="detailService.isRowOpen(item)"
+  [attr.aria-rowindex]="ariaRowIndex"
 >
   <div class="datagrid-row-sticky">
     <!-- Sticky elements here -->
