fix: updates and add functionality to insert new values

--- a/projects/angular/src/forms/combobox/combobox.html
+++ b/projects/angular/src/forms/combobox/combobox.html
@@ -63,6 +63,7 @@ width of the component, after being wrapped to a new line -->
     [(ngModel)]="searchText"
     (blur)="onBlur()"
     (focus)="onFocus()"
+    (change)="onChange()"
     [attr.aria-expanded]="openState"
     [attr.aria-owns]="ariaOwns"
     aria-haspopup="listbox"
