fix(datagrid): custom single and multi-selection on datagrid level (#2075)
Please check if your PR fulfills the following requirements:

- [x] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

You cannot dynamically set selected items in both single and multi
selection trough the inputs on datagrid level [clrDgSelected] or
[clrDgSingleSelected].

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2981

Both dynamic selection is working now.

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/data/datagrid/datagrid-row.html
+++ b/projects/angular/src/data/datagrid/datagrid-row.html
@@ -44,11 +44,12 @@
             tabindex="-1"
             type="radio"
             clrRadio
+            clrDgSingleSelectionRadio
+            [clrDgItemsTrackBy]="trackBy"
             [id]="radioId"
             [name]="selection.id + '-radio'"
             [value]="item"
             [(ngModel)]="selection.currentSingle"
-            [checked]="selection.currentSingle === item"
             [disabled]="clrDgSelectable ? null : true"
             [attr.aria-disabled]="clrDgSelectable ? null : true"
           />
