fix(combobox): validate only self on blur, don't trigger blur on option click

--- a/projects/angular/src/forms/combobox/combobox.html
+++ b/projects/angular/src/forms/combobox/combobox.html
@@ -61,7 +61,7 @@ width of the component, after being wrapped to a new line -->
     [id]="inputId()"
     class="clr-input clr-combobox-input"
     [(ngModel)]="searchText"
-    (blur)="onBlur()"
+    (blur)="onBlur($event)"
     (focus)="onFocus()"
     (change)="onChange()"
     [attr.aria-expanded]="openState"
