--- a/projects/angular/src/data/datagrid/datagrid.html
+++ b/projects/angular/src/data/datagrid/datagrid.html
@@ -90,12 +90,7 @@
             @if (virtualScroll) {
             <div class="datagrid-content-virtual-spacer" [style.height]="virtualScroll?.totalContentHeight"></div>
             }
-            <div
-              role="presentation"
-              #rowsWrapper
-              class="datagrid-rows"
-              [class.datagrid-scrollbar-visible]="isScrollbarVisible"
-            >
+            <div role="presentation" #rowsWrapper class="datagrid-rows">
               @if (loadingMoreItems) {
               <clr-dg-row class="datagrid-row-loading">
                 <clr-dg-cell>
