fix(datagrid): virtual scroll missing last row bottom border (#2102) (backport to main) (#2105)
port to main of #2102

## PR Checklist

Please check if your PR fulfills the following requirements:

- [x] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?
Last row in virtual scroll have missing bottom border.

Issue Number: CDE-2989

## What is the new behavior?
Last row in virtual scroll have bottom border.

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No


## Other information

---------

Co-authored-by: Valentin Mladenov <mvalentin@vmware.com>
Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/data/datagrid/datagrid.html
+++ b/projects/angular/src/data/datagrid/datagrid.html
@@ -89,7 +89,7 @@
               class="datagrid-content-virtual-spacer"
               [style.height]="virtualScroll?.totalContentHeight"
             ></div>
-            <div role="presentation" class="datagrid-rows">
+            <div role="presentation" #rowsWrapper class="datagrid-rows">
               <clr-dg-row class="datagrid-row-loading" *ngIf="loadingMoreItems">
                 <clr-dg-cell>
                   <clr-spinner clrMedium></clr-spinner>
