--- a/projects/angular/src/forms/combobox/combobox.html
+++ b/projects/angular/src/forms/combobox/combobox.html
@@ -57,7 +57,7 @@
     [id]="inputId()"
     class="clr-input clr-combobox-input"
     [(ngModel)]="searchText"
-    (blur)="onBlur()"
+    (blur)="onBlur($event)"
     (focus)="onFocus()"
     [attr.aria-expanded]="openState"
     [attr.aria-owns]="ariaOwns"
