--- a/projects/angular/src/forms/combobox/combobox.html
+++ b/projects/angular/src/forms/combobox/combobox.html
@@ -93,6 +93,9 @@ width of the component, after being wrapped to a new line -->
 <!-- Both close handlers are handled manually due to issues in Edge browser.
 Additionally 'outsideClickToClose' has complex handling that's necessary
 to be manual due to the component architecture -->
-<div role="dialog" *clrPopoverContent="openState at popoverPosition;">
+<div
+  role="dialog"
+  *clrPopoverContent="openState; at popoverPosition; type: popoverType; availablePositions: availablePositions;"
+>
   <ng-content></ng-content>
 </div>
