fix(popovers): default available positions are based on popover type

--- a/projects/angular/src/button/button-group/button-group.html
+++ b/projects/angular/src/button/button-group/button-group.html
@@ -29,7 +29,7 @@
     [id]="popoverId"
     [attr.id]="popoverId"
     [attr.aria-hidden]="!open"
-    *clrPopoverContent="open; at menuPosition; type: popoverType; availablePositions: availablePositions; outsideClickToClose: true; scrollToClose: true"
+    *clrPopoverContent="open; at menuPosition; type: popoverType; outsideClickToClose: true; scrollToClose: true"
   >
     @for (menuButton of menuButtons; track menuButton) {
     <ng-template [ngTemplateOutlet]="menuButton.templateRef"></ng-template>
